--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "unity": "2019.3",
     
     "dependencies": {
-        "com.dbrizov.naughtyattributes": "https://github.com/dbrizov/NaughtyAttributes.git#upm"
+        "com.dbrizov.naughtyattributes": "2.0.7"
     },
     "keywords": [
 
