Configured assembly definitions

--- a/Runtime/Hairibar.NaughtyExtensions.asmdef
+++ b/Runtime/Hairibar.NaughtyExtensions.asmdef
@@ -1,3 +1,15 @@
-﻿{
-	"name": "Hairibar.NaughtyExtensions"
+{
+    "name": "Hairibar.NaughtyExtensions",
+    "references": [
+        "NaughtyAttributes.Core"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
