--- a/Editor/Hairibar.NaughtyExtensions.Editor.asmdef
+++ b/Editor/Hairibar.NaughtyExtensions.Editor.asmdef
@@ -1,3 +1,19 @@
-﻿{
-	"name": "Hairibar.NaughtyExtensions.Editor"
+{
+    "name": "Hairibar.NaughtyExtensions.Editor",
+    "references": [
+        "Hairibar.NaughtyExtensions",
+        "NaughtyAttributes.Core",
+        "NaughtyAttributes.Editor"
+    ],
+    "includePlatforms": [
+        "Editor"
+    ],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
