--- a/package.json
+++ b/package.json
@@ -1,20 +1,15 @@
 {
     "name": "com.hairibar.naughtyextensions",
-    "version": "0.1.0",
-
+    "version": "1.0.0",
     "displayName": "Hairibar.NaughtyExtensions",
     "description": "A set of editor utilities built on top of NaughtyAttributes.",
     "unity": "2019.3",
-    
     "dependencies": {
         "com.dbrizov.naughtyattributes": "2.0.7"
     },
-    "keywords": [
-
-    ],
+    "keywords": [],
     "category": "library",
-
     "author": {
         "name": "Aitor Iribar"
     }
-  }
+}
